--- a/package.json
+++ b/package.json
@@ -8,65 +8,33 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
     "release": "webpack --mode production --output-path ./release",
-    "publish": "gh-pages -d build"
+    "publish": "webpack --mode production --output-path ./release && gh-pages --remote published -d release"
   },
   "author": "sean morrow",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.0.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
-    "eslint": "^8.31.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@eslint/js": "^9.17.0",
+    "babel-loader": "^9.2.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.15.0",
     "file-loader": "^6.2.0",
-    "gh-pages": "^5.0.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "sass": "1.43.5",
-    "sass-loader": "^12.3.0",
-    "terser-webpack-plugin": "^5.2.5",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es2022": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "rules": {
-      "indent": [
-        "warn",
-        4,
-        {
-          "SwitchCase": 1
-        }
-      ],
-      "quotes": [
-        "warn",
-        "double"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "no-unused-vars": [
-        "warn",
-        {
-          "vars": "local",
-          "args": "none",
-          "ignoreRestSiblings": true
-        }
-      ]
-    }
+    "gh-pages": "^6.2.0",
+    "globals": "^15.14.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "sass": "1.81.0",
+    "sass-loader": "^16.0.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "spin.js": "^4.1.2",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "leaflet": "^1.9.4"
   }
 }
