--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "spin.js": "^4.1.2",
     "@fortawesome/fontawesome-free": "^6.7.1",
-    "leaflet": "^1.9.4"
+    "leaflet": "^1.9.4",
+    "spin.js": "^4.1.2"
   }
 }
